crates/bitnet-kernels/tests/snapshots/snapshot_wave19__activation_config_gelu_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave19.rs
expression: cfg
---
ActivationConfig {
    n: 1024,
    threads_per_block: 256,
    activation: GELU,
}
