crates/bitnet-kernels/tests/snapshots/snapshot_wave19__activation_config_silu_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave19.rs
expression: cfg
---
ActivationConfig {
    n: 4096,
    threads_per_block: 256,
    activation: SiLU,
}
