crates/bitnet-kernels/tests/snapshots/snapshot_wave19__adaptive_pool2d_config_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave19.rs
expression: cfg
---
AdaptivePool2dConfig {
    batch: 1,
    channels: 512,
    in_h: 14,
    in_w: 14,
    out_h: 7,
    out_w: 7,
}
