crates/bitnet-kernels/tests/snapshots/snapshot_wave19__batched_softmax_causal_with_temperature.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave19.rs
expression: cfg
---
BatchedSoftmaxConfig {
    batch_size: 4,
    n_heads: 16,
    seq_len: 128,
    temperature: 0.7,
    causal_mask: true,
    mode: LogSoftmax,
}
