crates/bitnet-kernels/tests/snapshots/snapshot_wave19__batched_softmax_config_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave19.rs
expression: cfg
---
BatchedSoftmaxConfig {
    batch_size: 2,
    n_heads: 8,
    seq_len: 64,
    temperature: 1.0,
    causal_mask: false,
    mode: Standard,
}
