crates/bitnet-kernels/tests/snapshots/snapshot_wave19__cache_dtype_all_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave19.rs
expression: variants
---
[
    F32,
    F16,
    Bf16,
]
