crates/bitnet-kernels/tests/snapshots/snapshot_wave19__cuda_batch_norm_config_custom_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave19.rs
expression: cfg
---
BatchNormConfig {
    num_features: 128,
    eps: 0.001,
    momentum: 0.2,
    affine: true,
    track_running_stats: true,
}
